@startuml

abstract Car{
    Driver driver

    {abstract} drivingSound()
    outDriver()
    inToDriver()
    checkDriver()
    driving()
}

Class Sonata{
}

Class Ferrari{
}


class Driver{
    String name
    Gender gender
    getName()
    getGender()
    setName()
    setGender()
}

Enum Gender{
    MAN,WOMAN
}

Car *- Driver
Driver *-- Gender

Car <|-- Sonata
Car <|-- Ferrari


@enduml